# shm-anomaly-detection

./: .gitignore  01_data_cleaning.html  01_data_cleaning.md  03_autoencoder.html  03_autoencoder.md  core.html  index.html  index.html.md  isolation_forest.html  isolation_forest.html.md  pyproject.toml  robots.txt  search.json  sitemap.xml
learning/autoencoder/: autoencoder_usinglibrary.ipynb
modelling/: autoencoder copy.ipynb  autoencoder.ipynb
modelling/autoencoder/: auto_encoder copy.ipynb  kw51_shm_anomaly_detection.ipynb
modelling/isolation_forest/: isolation_forest.ipynb  tempCodeRunnerFile.ipynb
nbs/: 01_data_cleaning.ipynb  02_isolation_forest.ipynb  index.ipynb  nbdev.yml  sidebar.yml
notebooks/: data_cleaning.ipynb  processing copy.ipynb  processing.ipynb
resources/: Corrosion_detection.ipynb
shm_anomaly_detection/: _modidx.py  core.py
